cluster-api/manifests/environment-exposer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: environment-exposer
  namespace: pair-system
spec:
  selector:
    matchLabels:
      app: environment-exposer
  template:
    metadata:
      labels:
        app: environment-exposer
    spec:
      serviceAccountName: environment-exposer
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      securityContext:
        fsGroup: 1000
      containers:
        - name: environment-exposer
          image: registry.gitlab.com/sharingio/environment/exposer:2022.09.30.0909
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: template-folder
              mountPath: /home/ii/
              readOnly: true
      volumes:
        - name: template-folder
          hostPath:
            path: /home/ii/
