cluster-api/manifests/external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: k8s.gcr.io/external-dns/external-dns:v0.10.0
          args:
            - --source=crd
            - --source=ingress
            - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
            - --crd-source-kind=DNSEndpoint
            - --provider=pdns
            - --policy=sync
            - --registry=txt
            - --interval=10s
            - --log-level=debug
            - --managed-record-types=A
            - --managed-record-types=CNAME
            - --managed-record-types=NS
            - --managed-record-types=TXT
            - --managed-record-types=SRV
            - --domain-filter=$(SHARINGIO_PAIR_INSTANCE_SETUP_BASEDNSNAME)
            - --txt-owner-id=$(SHARINGIO_PAIR_INSTANCE_SETUP_USER)
            - --pdns-api-key=pairingissharing
            - --pdns-server=http://powerdns-service-api.pair-system:8081
