cluster-api/manifests/packet-ccm.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: packet-cloud-controller-manager
  namespace: kube-system
  labels:
    app: packet-cloud-controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: packet-cloud-controller-manager
  template:
    metadata:
      labels:
        app: packet-cloud-controller-manager
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      dnsPolicy: Default
      hostNetwork: true
      serviceAccountName: cloud-controller-manager
      tolerations:
        # this taint is set by all kubelets running `--cloud-provider=external`
        # so we should tolerate it to schedule the packet ccm
        - key: "node.cloudprovider.kubernetes.io/uninitialized"
          value: "true"
          effect: "NoSchedule"
        - key: "CriticalAddonsOnly"
          operator: "Exists"
        # cloud controller manager should be able to run on masters
        - key: "node-role.kubernetes.io/master"
          effect: NoSchedule
      containers:
      - image: packethost/packet-ccm:v2.0.0
        name: packet-cloud-controller-manager
        command:
          - "./packet-cloud-controller-manager"
          - "--cloud-provider=packet"
          - "--leader-elect=false"
          - "--allow-untagged-cloud=true"
          - "--authentication-skip-lookup=true"
          - "--provider-config=/etc/cloud-sa/cloud-sa.json"
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
        volumeMounts:
          - name: cloud-sa-volume
            readOnly: true
            mountPath: "/etc/cloud-sa"
      volumes:
        - name: cloud-sa-volume
          secret:
            secretName: packet-cloud-config
