cluster-api/manifests/helm-operator.yaml
---
# Source: helm-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helm-operator
  labels:
    app: helm-operator
    chart: helm-operator-1.2.0
    release: helm-operator
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3030
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: helm-operator
    release: helm-operator
---
# Source: helm-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-operator
  labels:
    app: helm-operator
    chart: helm-operator-1.2.0
    release: helm-operator
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helm-operator
      release: helm-operator
  strategy:
    type:  Recreate
  template:
    metadata:
      annotations:
        checksum/repositories: "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
      labels:
        app: helm-operator
        release: helm-operator
    spec:
      serviceAccountName: helm-operator
      volumes:
      - name: config
        configMap:
          name: helm-operator-kube-config
          defaultMode: 0600
      - name: git-key
        secret:
          secretName: helm-operator-git-deploy
          defaultMode: 0400
      containers:
      - name: flux-helm-operator
        image: "docker.io/fluxcd/helm-operator:1.2.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3030
        livenessProbe:
          httpGet:
            port: 3030
            path: /healthz
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            port: 3030
            path: /healthz
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /root/.kube
          readOnly: true
        - name: git-key
          mountPath: /etc/fluxd/ssh
          readOnly: true
        args:
        - --enabled-helm-versions=v3
        - --kubeconfig=/root/.kube/config
        - --log-format=fmt
        - --git-timeout=20s
        - --git-poll-interval=5m
        - --charts-sync-interval=3m
        - --status-update-interval=30s
        - --update-chart-deps=true
        - --log-release-diffs=false
        - --workers=4
        - --tiller-namespace=kube-system
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
