cluster-api/manifests/powerdns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-service-db
  namespace: pair-system
  labels:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
spec:
  type: ClusterIP
  ports:
    - port: 3306
      name: db
      protocol: TCP
      targetPort: 3306
  selector:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
    powerdns.com/role: db
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-service-api
  namespace: pair-system
  labels:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: api
      protocol: TCP
      name: api
  selector:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
    powerdns.com/role: api
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-service-dns-tcp
  namespace: pair-system
  labels:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
  annotations:
    metallb.universe.tf/allow-shared-ip: nginx-ingress
spec:
  type: LoadBalancer
  externalIPs:
    - ${KUBERNETES_CONTROLPLANE_ENDPOINT}
    - ${MACHINE_IP}
  ports:
    - port: 53
      targetPort: dns-tcp
      protocol: TCP
      name: dns-tcp
  selector:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
    powerdns.com/role: api
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-service-dns-udp
  namespace: pair-system
  labels:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
  annotations:
    metallb.universe.tf/allow-shared-ip: nginx-ingress
spec:
  type: LoadBalancer
  externalIPs:
    - ${KUBERNETES_CONTROLPLANE_ENDPOINT}
    - ${MACHINE_IP}
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
  selector:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
    powerdns.com/role: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-db
  namespace: pair-system
  labels:
    powerdns.com/role: db
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: powerdns
      app.kubernetes.io/instance: powerdns
      powerdns.com/role: db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: powerdns
        app.kubernetes.io/instance: powerdns
        powerdns.com/role: db
    spec:
      # securityContext:
      # fsGroup: 1000
      containers:
        - name: mariadb
          image: "linuxserver/mariadb:alpine-version-10.5.12-r0"
          imagePullPolicy: IfNotPresent
          # securityContext:
          #   runAsUser: 1000
          #   runAsGroup: 1000
          #   runAsNonRoot: true
          volumeMounts:
            - name: powerdns-db
              mountPath: /var/lib/mysql
      volumes:
        - name: powerdns-db
          persistentVolumeClaim:
            claimName: powerdns-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns
  namespace: pair-system
  labels:
    app.kubernetes.io/name: powerdns
    app.kubernetes.io/instance: powerdns
    powerdns.com/role: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: powerdns
      app.kubernetes.io/instance: powerdns
      powerdns.com/role: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: powerdns
        app.kubernetes.io/instance: powerdns
        powerdns.com/role: api
    spec:
      containers:
        - name: powerdns
          image: "pschiffe/pdns-mysql:4.3-alpine"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pdnsutil list-zone ${SHARINGIO_PAIR_INSTANCE_SETUP_BASEDNSNAME}
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -vz powerdns-service-db 3306
            initialDelaySeconds: 20
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - |
                    [...]
          # securityContext:
          #   runAsUser: 101
          #   runAsGroup: 100
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          #   allowPrivilegeEscalation: false
          #   capabilities:
          #     add:
          #       - NET_BIND_SERVICE
          #     drop:
          #       - all
          command:
            - pdns_server
          ports:
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 8081
              name: api
              protocol: TCP
          volumeMounts:
            - name: powerdns
              mountPath: /etc/pdns/
            - name: var-run-pdns
              mountPath: /var/run/pdns
      volumes:
        - name: powerdns
          configMap:
            name: powerdns
        - name: var-run-pdns
          emptyDir: {}
