cluster-api/manifests/distribution.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distribution
  namespace: pair-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distribution
  template:
    metadata:
      labels:
        app: distribution
    spec:
      containers:
        - name: distribution
          image: registry:2.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: distribution-data
              mountPath: /var/lib/registry
            - name: distribution-config
              mountPath: /etc/docker/registry/config.yml
              subPath: config.yml
            - name: distribution-auth
              mountPath: /etc/docker/registry/htpasswd
              subPath: htpasswd
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 1
            periodSeconds: 20
      volumes:
        - name: distribution-data
          persistentVolumeClaim:
            claimName: distribution-data
        - name: distribution-config
          configMap:
            name: distribution-config
        - name: distribution-auth
          secret:
            secretName: distribution-auth
---
apiVersion: v1
kind: Service
metadata:
  name: distribution
  namespace: pair-system
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: distribution
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distribution
  namespace: pair-system
  annotations:
    kubernetes.io/ingress.class: $SHARINGIO_PAIR_INSTANCE_INGRESS_CLASS_NAME
spec:
  tls:
    - hosts:
        - registry.${SHARINGIO_PAIR_BASE_DNS_NAME}
      secretName: letsencrypt-prod
  rules:
    - host: registry.${SHARINGIO_PAIR_BASE_DNS_NAME}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: distribution
                port:
                  number: 5000
